<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Setup Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_suggestion">Setup Assistant</string>
    <string name="UndersteerbtnText">Understeer</string>
    <string name="OversteerBtnText">Oversteer</string>
    <string name="StabilityBtnText">Straight Line Stability</string>
    <string name="ResponseBtnText">Steering Response</string>
    <string name="RollBtnText">Traction Roll</string>
    <string name="title_activity_position">Setup Assistant</string>
    <string name="title_activity_throttle_position">Setup Assistant</string>
    <string name="startOverBtn">Start over</string>
    <string name="NoBtn">No</string>
    <string name="YesBtn">Yes</string>
    <string name="CornerEntryBtn">at Corner Entry</string>
    <string name="MidCornerBtn">at Mid Corner</string>
    <string name="CornerExitBtn">at Corner Exit</string>
    <string name="BreakingBtn">at Breaking</string>
    <string name="CharacteristicPrompt">Select the handling characteristic that best describes your car’s handling problem.</string>
    <string name="PositionPrompt">Select the part of the corner that the handling characteristic occurs in.</string>
    <string name="ThrottlePrompt">Select if you are on throttle when the handling characteristic occurs.</string>
    <string name="understeer">Understeer</string>
    <string name="oversteer">Oversteer</string>
    <string name="steeringResponse">Steering Response</string>
    <string name="stability">Straight Line Stability</string>
    <string name="roll">Traction Roll</string>
    <string name="DataFile">Data.csv</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="seventh">Seventh</string>
    <string name="eight">Eighth</string>
    <string name="then">then</string>
    <string name="tri">Try </string>
    <string name="onThrottle">-On Throttle</string>
    <string name="OffThrottle">-Off Throttle</string>

</resources>
